[package]
name = "tracing-axiom"
version = "0.5.0"
authors = ["Arne Bahlo <arne@axiom.co>", "Darach Ennis <darach@gmail.com>"]
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
description = "The tracing layer for shipping traces to Axiom"
homepage = "https://axiom.co"
repository = "https://github.com/axiomhq/tracing-axiom"
documentation = "https://docs.rs/tracing-axiom"
keywords = ["tracing", "axiom", "instrumentation", "opentelemetry"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
resolver = "2"

[dependencies]
opentelemetry = "0.20"
opentelemetry-otlp = { version = "0.13", features = [
  "prost",
  "http-proto",
  "reqwest-client",
] }
tracing-core = { version = "0.1", default-features = false, features = ["std"] }
tracing-opentelemetry = { version = "0.21", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "smallvec",
  "std",
  "registry",
  "fmt",
  "json",
] }
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
thiserror = "1"
opentelemetry-semantic-conventions = "0.12"
url = "2.4.1"

[dev-dependencies]
tokio = "1"
tracing = { version = "0.1", features = ["log"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }

[features]
default = ["default-tls", "tokio"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
tokio = [
  "opentelemetry/rt-tokio",
  "opentelemetry-otlp/tokio",
]
