[package]
name = "tracing-axiom"
version = "0.5.0"
authors = ["Arne Bahlo <arne@axiom.co>", "Darach Ennis <darach@gmail.com>"]
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
description = "The tracing layer for shipping traces to Axiom"
homepage = "https://axiom.co"
repository = "https://github.com/axiomhq/tracing-axiom"
documentation = "https://docs.rs/tracing-axiom"
keywords = ["tracing", "axiom", "instrumentation", "opentelemetry"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
resolver = "2"

[dependencies]
opentelemetry = { version = "0.22" }
opentelemetry-otlp = { version = "0.15", features = [
    "prost",
    "tokio",
    "http-proto",
    "reqwest-client",
] }
tracing-core = { version = "0.1", default-features = false, features = ["std"] }
tracing-opentelemetry = { version = "0.23", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "std",
    "registry",
    "fmt",
    "json",
] }
reqwest = { version = "0.11", default-features = false }
thiserror = "1"
opentelemetry-semantic-conventions = "0.14"
url = "2.4.1"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1", features = ["log"] }
opentelemetry = { version = "0.22" }
anyhow = "1.0.80"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "std",
    "registry",
    "fmt",
    "json",
    "ansi",
] }

# Example that demonstrates how to use the `tracing-axiom` layer with the `tracing-subscriber` crate.
[[example]]
name = "layers"

# Simple most example use of `tracing-axiom`.
[[example]]
name = "simple"

# Example that demonstrates using a nice color and formating
[[example]]
name = "fmt"


# Demonstrate setting config in the code
[[example]]
name = "noenv"


[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
