[package]
name = "tracing-axiom"
version = "0.6.1"
authors = [
    "Arne Bahlo <arne@axiom.co>",
    "Darach Ennis <darach@gmail.com>",
    "Heinz Gies <heinz@licenser.net>",
]
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
description = "The tracing layer for shipping traces to Axiom"
homepage = "https://axiom.co"
repository = "https://github.com/axiomhq/tracing-axiom"
documentation = "https://docs.rs/tracing-axiom"
keywords = ["tracing", "axiom", "instrumentation", "opentelemetry"]
readme = "README.md"
include = [
    "src/**/*.rs",
    "examples",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
resolver = "2"

[dependencies]
url = "2.4.1"
thiserror = "1"

tracing-core = { version = "0.1", default-features = false, features = ["std"] }
tracing-opentelemetry = { version = "0.23", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "std",
    "registry",
    "fmt",
    "json",
] }


reqwest = { version = "0.11", default-features = false }
opentelemetry = { version = "0.22" }
opentelemetry-otlp = { version = "0.15", features = [
    "prost",
    "tokio",
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.15"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "std",
    "registry",
    "fmt",
    "json",
    "ansi",
] }

# Example that demonstrates how to use the `tracing-axiom` layer with the `tracing-subscriber` crate.
[[example]]
name = "layers"

# Simple most example use of `tracing-axiom`.
[[example]]
name = "simple"

# Example that demonstrates using a nice color and formating
[[example]]
name = "fmt"

# Demonstrate setting config in the code
[[example]]
name = "noenv"

[features]
default = ["rustls-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
