[package]
name = "layers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1"
tracing = "0.1"
tracing-axiom = { path = "../../" }
axiom-rs = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = "0.3.17"
opentelemetry-otlp = "0.13.0"
tracing-opentelemetry = "0.21.0"
anyhow = "1.0.75"
opentelemetry = "0.20.0"
